--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ a:hover{
 }
 
 .hot-menu{
-  background: url('/img/background/background.png') no-repeat;
+  background: url('./img/background/background.png') no-repeat;
   background-size: cover;
   background-position: center;
 
